tests/fixtures/invalid/min_list_dict.py
# Cannot call min() with List[int], Dict[str, int]
x = min([1, 2, 3], {"a": 1})
